--- a/index.html
+++ b/index.html
@@ -89,6 +89,52 @@
                 </li>
             </ul>
         </section>
+        <section>
+          <ul>
+            <li>
+                <a href="">
+                 <img src="./images/img5.jpg" alt="Banking App" width="360" height="300"/>
+                 <h3>Banking App</h3>
+                 <p>App</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                 <img src="./images/img6.jpg" alt="Cashless Payment" width="360" height="300"/>
+                 <h3>Cashless Payment</h3>
+                 <p>Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                 <img src="./images/img7.jpg" alt="Meditation App" width="360" height="300"/>
+                 <h3>Meditation App</h3>
+                 <p>App</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                 <img src="./images/img8.jpg" alt="Taxi Service" width="360" height="300"/>
+                 <h3>Taxi Service</h3>
+                 <p>Marketing</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                  <img src="./images/img9.jpg" alt="Screen Illustrations" width="360" height="300"/>
+                  <h3>Screen Illustrations</h3>
+                  <p>Design</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                 <img src="./images/img10.jpg" alt="Online Courses" width="360" height="300"/>
+                 <h3>Online Courses</h3>
+                 <p>Marketing</p>
+                </a>
+            </li>
+          </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
