--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css"/>
     <title>WebStudio</title>
 </head>
 <body>
     <header>
         <nav>
-         <a href="./index.html">WebStudio</a>
-            <ul>
-             <li><a href="">Studio</a></li>
-             <li><a href="">Portfolio</a></li>
-             <li><a href="">Contacts</a></li>
+         <a class="logo" href="./index.html">WebStudio</a>
+            <ul class="nav">
+             <li><a href="#studio" class="link">Studio</a></li>
+             <li><a href="#portfolio" class="link">Portfolio</a></li>
+             <li><a href="#contacts" class="link">Contacts</a></li>
             </ul>
         </nav>
      <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
       </ul>
      </address>
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button class="button1" type="button">Order Service</button>
         </section>
         <section>
             <h2>Section 2</h2>
@@ -95,7 +95,8 @@
             </ul>
         </section>
         <section>
-          <ul>
+        <h2>Our Portfolio</h2>
+          <ul class="portfolio">
             <li>
                 <a href="">
                  <img src="./images/img5.jpg" alt="Banking App" width="360" height="300"/>
