--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
      </address>
     </header>
     <main>
-        <section>
+        <section class="s1">
             <h1>Effective Solutions for Your Business</h1>
             <button class="button1" type="button">Order Service</button>
         </section>
         <section>
-            <h2>Section 2</h2>
+            <h2 hidden>Section 2</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -57,7 +57,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="s2">
             <h2>Our Team</h2>
             <ul>
                 <li>
@@ -143,7 +143,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
