--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-         <a class="logo" href="./index.html">WebStudio</a>
+         <a class="logo" href="./index.html">Web<span class="accent">Studio</span></a>
             <ul class="nav">
              <li><a href="#studio" class="link">Studio</a></li>
              <li><a href="#portfolio" class="link">Portfolio</a></li>
@@ -143,7 +143,7 @@
         </section>
     </main>
     <footer>
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">Web<span class="accent1">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
