--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
      <address class="adres">
       <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        <li><a class="contacts-menu" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li><a class="contacts-menu" href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
       </ul>
      </address>
     </header>
