--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-         <a class="nav-logo" href="./index.html">Web<span class="accent">Studio</span></a>
+         <a class="nav-logo" href="./index.html">Web<span class="accent-header">Studio</span></a>
             <ul class="nav">
              <li class ="nav-list"><a href="./index.html" class="link">Studio</a></li>
              <li><a href="" class="link">Portfolio</a></li>
@@ -131,7 +131,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-footer" href="./index.html">Web<span class="accent1">Studio</span></a>
+        <a class="logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
