--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a class="logo-footer" href="./index.html">Web<span class="accent-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
